txt-output/23.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: True should be Int
v13 = (\x -> x + 4) (if True then True else 1)        

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\23.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\23.hs:6:17:
    No instance for (Num Bool)
      arising from the literal `4' at ill-typed\23.hs:6:17
    Possible fix: add an instance declaration for (Num Bool)
    In the second argument of `(+)', namely `4'
    In the expression: x + 4
    In the expression: (\ x -> x + 4) (if True then True else 1)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\23.hs, ill-typed\23.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\23.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\23.hs:6:16: error:
    * No instance for (Num Bool) arising from a use of `+'
    * In the expression: x + 4
      In the expression: \ x -> x + 4
      In the expression: (\ x -> x + 4) (if True then True else 1)
  |
6 | v13 = (\x -> x + 4) (if True then True else 1)        
  |                ^
